# FireMason

./: .gitignore  FireMason.cabal  addTimes.py  badPorts.sh  changes.txt  changes2.txt  checkSat.smt2  checkSatWorking.smt2  dem1.sh  dem1Changes.txt  dem1NewSpec.txt  dem2.sh  dem2Changes.txt  demChanges.txt  ex  fac.smt2  firewallHorn.smt2  firewallPython.sh  firewallcode.cabal  hornTest.smt2  power.txt  powerChanges.txt  predicates.smt2  readme.rtf  readme.txt  runScalability.py  simpleDem.sh  simpleDemChanges.txt  simpleTest.sh  simpleTest2.sh  smtTest.smt2  smtTest.smt2.txt  speedTests.txt  stack.yaml  temp.smt2  test.sh  test2.sh  test3.sh  testCut.sh  testOut.sh  (+2 more)
.stack-work/install/x86_64-osx/ghc-7.10.2/7.10.2/flag-cache/: Glob-0.7.11-214e1ab749850afd0f46c4105344f5d0  (+54 more)
app/: ChainPathSimplification.hs  ChainsToSMT.hs  ChainsToSMT2.hs  ConvertCommandsToChains.hs  ConvertIptables.hs  ConvertIptablesLimits.hs  ConvertIptablesPorts.hs  ConvertIptablesSets.hs  ConvertToHorn.hs  CriteriaPrereqAddition.hs  EliminateAndsOrs.hs  ExampleAdjustment.hs  InstructionsToIptables.hs  IptablesTypes.hs  Main.hs  NameIdChain.hs  ParseSpecificationLanguage.hs  ParseSpecificationLanguage2.hs  ParserHelp.hs  RuleAdding.hs  RuleEliminating.hs  SMT.hs  Types.hs  Verifier.hs  smtTest.txt  test.txt
firewallsPy/: example1.txt  firewallPython100.sh  firewallPython10000.sh  firewallPython250.sh  firewallPython375.sh  firewallPython50.sh  firewallPython500.sh
journal_tests/: firewall1.sh  onlyTest.txt
journal_tests/jbench1/: example1
journal_tests/jbench3/: example3
realWorldExamples/: examples4  examplesSec2.txt  firewall4Fixed  firewallEx
smt/: firewallPredicates.smt2  firewallPredicates2.smt2  firewallPredicatesReplacePCR.smt2  test.smt2
test/: ConvertToHornTests.hs  CriteriaPrereqAdditionTests.hs  ExampleAdjustmentTests.hs  NameIdChainTests.hs  RuleAddingTests.hs  Spec.hs  TypesTests.hs
test/bench/bench1/: examples1  firewall1  firewall1Fixed.sh  need
test/bench/bench2/: examples2  firewall2  firewall2Fixed.sh  need
test/bench/bench3/: examples3  firewall3  firewall3Fixed.sh  need
test/bench/bench4/: examples4  firewall4  firewall4Fixed.sh  need
test/bench/bench5/: examples5  firewall5  firewall5Fixed.sh  need
test/changesFilesUnused/: dem1Changes.txt  limChangeOr1.txt  limChangeOr2.txt  limChanges1.txt  limChanges2.txt  limChanges3.txt  limChanges4.txt  limChanges5.txt  limChanges6.txt  limChanges7.txt  limitTestChanges.txt
test/firewalls/: dem1.sh  example1.sh  example2.sh  example3.sh  limTest.sh  limitTesting.sh
test/real_world/: runCases.sh
test/real_world/firewallsPy/: example1.txt  example10.txt  example10Rate.txt  example12Rate.txt  example12Stateless.txt  example15.txt  example15Rate.txt  example1Rate.txt  firewallPython1000.sh  firewallPython50000.sh  genRandom.py
test/real_world/firewallsPy/firewallsPy/: firewallPython100.sh  firewallPython250.sh  firewallPython375.sh  firewallPython500.sh
test/real_world/realWorldExamples/: firewall4  realWorld.sh
(+2094 files in other folders)
