name:                FireMason
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/firewallcode#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable FireMason-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bv
                     , z3 >= 408.0
                     , criterion <= 1.4.1.0
                     , iproute
                     , FireMason
                     , split
                     , containers
                     , largeword
                     , MissingH
                     , process
                     , tostring
  default-language:    Haskell2010
  other-modules:     ChainsToSMT
                     , ConvertIptables
                     , ConvertIptablesLimits
                     , ConvertIptablesPorts
                     , ConvertToHorn
                     , ExampleAdjustment
                     , InstructionsToIptables
                     , IptablesTypes
                     , NameIdChain
                     , ParserHelp
                     , ParseSpecificationLanguage
                     , RuleAdding
                     , RuleEliminating
                     , Types

test-suite FireMason-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, app
  main-is:             Spec.hs
  build-depends:       base
                     , iproute
                     , FireMason
                     , split
                     , containers
                     , largeword
                     , MissingH
                     , HUnit
                     , process
                     , tostring
                     , z3
  other-modules:       ChainsToSMT
                     , ConvertToHorn
                     , ConvertToHornTests
                     , ExampleAdjustment
                     , ExampleAdjustmentTests
                     , InstructionsToIptables
                     , IptablesTypes
                     , NameIdChain
                     , NameIdChainTests
                     , ParserHelp
                     , RuleAdding
                     , RuleAddingTests
                     , Types
                     , TypesTests
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/firewallcode
